--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <h1 id="greeting">Hello from CI/CD lab</h1>
     <h2> testing changes using pages </h2>
-    <h3> testing webhook </h3>
+    <h3> testing webhook again</h3>
     <script src="main.js"></script>
   </body>
 </html>
