--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <h1 id="greeting">Hello from CI/CD lab</h1>
     <h2> testing changes using pages </h2>
     <h3> testing webhook again......</h3>
+    <h3> Configured the jenkins job</h3>
     <script src="main.js"></script>
   </body>
 </html>
